--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -56,90 +56,69 @@
               EmprendeAdvisor busca ser el primer directorio digital de
               emprendimientos del Perú
             </p>
-            <a class="btn btn-altdark text-light mx-3" href="/dashboard"
-              >Buscar</a
-            >
-          </div>
-          <img
-            class="img-fluid w-50 d-none d-sm-block"
-            src="{{ url_for('static', filename='images/img1.svg') }}"
-          />
+            <a class="btn btn-altdark text-light" href="/dashboard">Buscar</a>
         </div>
-      </div>
-    </section>
+        <img class="img-fluid w-50 d-none d-sm-block" src="{{ url_for('static', filename='images/img1.svg') }}" />
+        </div>
+        </div>
+        </section>
 
-    <section class="container-fluid bg-altlight">
-      <div class="container bg-altlight py-5">
-        <div class="row align-items-center justify-content-center bg-altlight">
-          <div class="col-6 mb-4 mb-sm-3 col-lg-4">
-            <img
-              class="img-fluid image-section"
-              src="{{ url_for('static', filename='images/img2.svg') }}"
-            />
-          </div>
+        <section class="container-fluid bg-altlight">
+            <div class="container bg-altlight py-5">
+                <div class="row align-items-center justify-content-center bg-altlight">
+                    <div class="col-6 mb-4 mb-sm-3 col-lg-4">
+                        <img class="img-fluid image-section" src="{{ url_for('static', filename='images/img2.svg') }}" />
+                    </div>
 
-          <div class="text-center col-md-6 col-lg-4 bg-altlight">
-            <h3 class="text-dark">
-              ¿Cansado de buscar opiniones, calificaciones sobre un
-              emprendimiento?
-            </h3>
-            <p class="text-dark lead my-4">
-              A todos nos ha pasado que en ocasiones especiales, nos es dificil
-              encontrar ese emprendimiento que vimos, o encontrar alguno similar
-            </p>
-            <button
-              class="btn btn-altdark text-light"
-              data-bs-toggle="modal"
-              data-bs-target="#register"
-            >
+                    <div class="text-center col-md-6 col-lg-4 bg-altlight">
+                        <h3 class="text-dark">
+                            ¿Cansado de buscar opiniones, calificaciones sobre un emprendimiento?
+                        </h3>
+                        <p class="text-dark lead my-4">
+                            A todos nos ha pasado que en ocasiones especiales, nos es dificil encontrar ese emprendimiento que vimos, o encontrar alguno similar
+                        </p>
+                        <button class="btn btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#register">
               Únete a la comunidad
             </button>
-          </div>
-        </div>
-      </div>
-    </section>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section class="container-fluid my-5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="text-center col-md-4 col-lg-4">
-            <h3 class="text-dark">
-              Explora Emprende<span class="text-altdark">Advisor</span>
-            </h3>
-            <p class="text-dark lead my-4">
-              Encuentra tus emprendimientos por categorías, si no lo encuentras
-              ayudanos a irlos categorizando, solo busca su usuario de Instagram
-              y añadelo!
-            </p>
-          </div>
-          <div class="col-md-8 col-lg-8">
-            <div class="row justify-content-evenly text-light g-4">
-              <div
-                class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome"
-              >
-                <a href="/emprendimientos/category/3">
-                  <img
-                    class="img-fluid"
-                    src="{{ url_for('static', filename='images/burgers.svg') }}"
-                /></a>
-                    <h5 class="text-center my-3">Comida</h5>
-        </div>
+        <section class="container-fluid my-5">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="text-center col-md-4 col-lg-4">
+                        <h3 class="text-dark">
+                            Explora Emprende<span class="text-altdark">Advisor</span>
+                        </h3>
+                        <p class="text-dark lead my-4">
+                            Encuentra tus emprendimientos por categorías, si no lo encuentras ayudanos a irlos categorizando, solo busca su usuario de Instagram y añadelo!
+                        </p>
+                    </div>
+                    <div class="col-md-8 col-lg-8">
+                        <div class="row justify-content-evenly text-light g-4">
+                            <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
+                                <a href="/emprendimientos/category/3">
+                                    <img class="img-fluid" src="{{ url_for('static', filename='images/burgers.svg') }}" /></a>
+                                <h5 class="text-center my-3">Comida</h5>
+                            </div>
 
-        <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
-            <a href="/emprendimientos/category/15">
-                <img class="img-fluid" src="{{ url_for('static', filename='images/mascotas.svg') }}" /></a>
-            <h5 class="text-center my-3">Mascotas</h5>
-        </div>
+                            <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
+                                <a href="/emprendimientos/category/15">
+                                    <img class="img-fluid" src="{{ url_for('static', filename='images/mascotas.svg') }}" /></a>
+                                <h5 class="text-center my-3">Mascotas</h5>
+                            </div>
 
-        <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
-            <a href="/emprendimientos/category/21">
-                <img class="img-fluid" src="{{ url_for('static', filename='images/gifts.svg') }}" /></a>
-            <h5 class="text-center my-3">Regalos</h5>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
+                            <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
+                                <a href="/emprendimientos/category/21">
+                                    <img class="img-fluid" src="{{ url_for('static', filename='images/gifts.svg') }}" /></a>
+                                <h5 class="text-center my-3">Regalos</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="footer">
@@ -164,10 +143,17 @@
         </div>
         <div class="col-sm-4 text-light text-center">
           <h5 class="text-tertiary my-4">Categorías</h5>
-          <a href="/emprendimientos/subcategory/29"><h5>Postres</h5></a>
-                        <a class="text-reset text-decoration-none" href="/emprendimientos/subcategory/71">
-                            <h5>Joyería</h5>
-                        </a>
+          <a
+            class="text-reset text-decoration-none"
+            href="/emprendimientos/subcategory/29"
+            ><h5>Postres</h5></a
+          >
+          <a
+            class="text-reset text-decoration-none"
+            href="/emprendimientos/subcategory/71"
+          >
+            <h5>Joyería</h5>
+          </a>
                         <a class="text-reset text-decoration-none" href="/emprendimientos/subcategory/38">
                             <h5>Ropa mujer</h5>
                         </a>
