--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -154,8 +154,9 @@
         {% if emprendimiento.category_id != "" %}
         <div class="row my-3">
           <div class="col-12">
-            <span>{{emprendimiento.categoria}}</span><span class="mx-3">></span
-            ><span>{{emprendimiento.subcategoria}}</span>
+            <span>{{emprendimiento.subcategoria}}</span
+            ><span class="mx-3">></span
+            ><span>{{emprendimiento.categoria}}</span>
           </div>
         </div>
         {% endif %} {% if emprendimiento.is_private %}
@@ -324,19 +325,73 @@
             {% if userSession != "" %}
             <a class="btn btn-altprimary text-light w-100 my-3" href="#" data-bs-toggle="modal" data-bs-target="#review">Escribir mi opinión</a
             >
-            {% else %}
+            <input type="hidden" id="id_session_hidden"
+            value={{session["user_id"]}}> {% else %}
             <a
               class="btn btn-altprimary text-light w-100 my-3"
               href="#"
               data-bs-toggle="modal"
               data-bs-target="#login"
+              id="writeOpinionBtn"
               >Escribir mi opinión</a
             >
-
+            <input type="hidden" id="id_session_hidden" value="0" />
             {% endif %}
           </div>
           <div class="col-lg-9 py-2 px-lg-5 d-flex flex-column">
             <h4 class="mb-3">Recientes</h4>
+
+            {% for review in reviewsList %}
+            <div class="d-flex flex-column commentBx my-3">
+              <div class="d-flex align-items-center">
+                <img
+                  src="{{review.user.image}}"
+                  class=""
+                  data-src="{{review.user.image}}"
+                />
+                <span class="mx-2"
+                  >{{review.user.first_name}} {{review.user.last_name}}</span
+                >
+              </div>
+              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
+                <div class="d-flex text-yellowstar my-2">
+                  {% set stars = review.rating %} {% set remain = 5 - stars %}
+                  {% for n in range(stars) %}
+                  <i class="bi bi-star-fill mx-1 starIcon"></i> {% endfor %} {%
+                  for n in range(remain) %}
+                  <i class="bi bi-star mx-1 starIcon"></i> {% endfor %}
+                </div>
+                <div class="mx-lg-2 my-2 my-lg-0 commentBxTitle">
+                  {{review.title}}
+                </div>
+              </div>
+              <div class="commentBxDate">
+                Calificado en {{review.distrito}} el
+                {{review.created_at.strftime('%d/%m/%Y')}}
+              </div>
+              <p class="commentBxMsg my-2">{{review.comment}}</p>
+              <p class="commentBxMsg my-2">
+                A
+                <span class="likesCountSpan">{{review.likesCount}}</span>
+                personas les resultó útil
+              </p>
+              {% if review.user.id != session["user_id"] %}
+              <div class="d-flex align-items-center">
+                <a
+                  class="btn btn-tertiary text-dark px-4 likeButton"
+                  id="review-{{review.id}}"
+                  >Útil {% if review.isLikedBySession %}
+                  <i class="bi bi-hand-thumbs-down starIcon likeButtonIcon"></i>
+                  {% else %}
+                  <i class="bi bi-hand-thumbs-up starIcon likeButtonIcon"></i>
+                  {% endif %}
+                </a>
+            <a class="mx-3 border-start border-1 border-dark px-3" data-bs-toggle="modal" data-bs-target="#report" style="cursor: pointer">Informar de un abuso</a
+                >
+              </div>
+              {% endif %}
+            </div>
+            {% endfor %}
 
             <div class="d-flex flex-column commentBx my-3">
               <div class="d-flex align-items-center">
