--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -344,6 +344,7 @@
                   Cargar más emprendimientos
                 </button>
                     </form>
+                    <input type="hidden" id="pathCategory" value="{{pathCategory}}" />
                 </div>
             </div>
             </div>
